docs(swagger): Adding to endpoint documentation
